[package]
name = "networking_challenges"
version = "0.1.0"
authors = ["ND Tai <49815011+ndtai772@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "plus"
path = "src/plus.rs"

[[bin]]
name = "poly"
path = "src/poly.rs"